secondfile/objects/DHStatus_Port_Assignment_Data__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data</description>
    <fields>
        <fullName>Base_Port__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Base Port</description>
        <label>Base Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bay__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Bay</description>
        <label>Bay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bearer_Circuit_ID__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Bearer Circuit ID</description>
        <label>Bearer Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_CLEI__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Card CLEI</description>
        <label>Card CLEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Model__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Card Model</description>
        <label>Card Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-DHStatus-Connection Level Data</description>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>Port Assignment Data</relationshipLabel>
        <relationshipName>Port_Assignment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_PL_Port_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-PL Port Data</label>
        <referenceTo>DHStatus_PL_Port_Data__c</referenceTo>
        <relationshipLabel>DHStatus-Port Assignment Data</relationshipLabel>
        <relationshipName>DHStatus_Port_Assignment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_CLLI__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Equipment CLLI</description>
        <label>Equipment CLLI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_FIC__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Equipment FIC</description>
        <label>Equipment FIC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Model__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Equipment Model</description>
        <label>Equipment Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Name__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Equipment Name</description>
        <label>Equipment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Vendor__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Equipment Vendor</description>
        <label>Equipment Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLPPP_Link_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-MLPPP Link Number</description>
        <label>MLPPP Link Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Number__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Port Number</description>
        <label>Port Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Port_Type__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Port Type</description>
        <label>Port Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EGS-Customer_Facing</fullName>
                </value>
                <value>
                    <fullName>EGS-Network_Facing</fullName>
                </value>
                <value>
                    <fullName>L3-PE</fullName>
                </value>
                <value>
                    <fullName>PPP-T1</fullName>
                </value>
                <value>
                    <fullName>MLPPP-T1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Line_Specific_Data__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Private Line Specific Data</description>
        <label>Private Line Specific Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Shelf</description>
        <label>Shelf</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-DHStatus-Port Assignment Data-Slot</description>
        <label>Slot</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oc3Channel__c</fullName>
        <label>OC3 Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>portAssignmentID__c</fullName>
        <label>Port Assignment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>portAssignmentType__c</fullName>
        <label>Port Assignment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>t1channel__c</fullName>
        <label>T1 Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>t3Channel__c</fullName>
        <label>T3 Channel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DHStatus-Port Assignment Data</label>
    <nameField>
        <displayFormat>PAD-{0000}</displayFormat>
        <label>DHStatus-Port Assignment Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Port Assignment Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>